--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "framer-motion": "^2.9.5",
+    "node-sass": "^6.0.1",
     "react": "^16.14.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^16.14.0",
