--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "catpure",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://peuks.github.io/capture",
+  "homepage": "https://peuks.github.io/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
